--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
  color: rgb(14, 14, 14);
 }
 .sign-btn{
+ font-weight: bold;
  color: rgb(0, 106, 80);
 border: 1px solid black;
 border-radius: 5px;
@@ -50,7 +51,7 @@ color: rgb(14, 14, 14);
 padding-bottom: 15px;
 }
 .banner-btn{
-margin-top: 15px;
+margin-top: 18px;
  padding:10px ;
  background-color: rgb(0, 106, 80);
  border-radius: 4px;
@@ -161,34 +162,108 @@ color: black;
 padding-bottom: 5px;
 }
 /*The Vision of Future section*/
+
 .main-contenar{
- background-color: #FFFFFF;
- width: 90%;
  height: 500px;
- padding-top: 60px;
+ width: 90%;
  margin: 0 auto;
- text-align: start;
-}
-.main-heading{
- font-size:35px ;
- padding-bottom: 15px;
- padding-left: 114px;
- color: #0E0E0E;
-}
-.main-dec{
- color: rgb(14, 14, 14, 0.7);
- padding-left: 114px;
+ background-color: #F1F1F3;
+ margin-top: 50px;
+ padding-top: 50px;
+ margi: 220px;
+ 
 }
 
 .sub-contenar{
- height: 270px;
- width: 350px;
- background-color:rgba(84, 144, 245, 0.2);
-}
-
-.main-1{
- text-align: left;
+ display: flex;
+ justify-content: center;
+ gap: 22px;
+ margin-top: 40px;
 }
 .main-heading{
- text-align: justify;
+ color: #0E0E0E;
+ font-size: 35px;
+ padding-bottom: 20px;
+ color: #0E0E0E;
+ padding-left: 115px;
+}
+.main-dec{
+ color: #0E0E0E;
+ padding-bottom: 20px;
+ color: #0E0E0E;
+ padding-left: 115px;
+}
+.main-1{
+ height: 250px;
+ width: 350px;
+ background-color: #81B4FC;
+ padding-top: 40px;
+ padding-right: 20px;
+ padding-left: 20px;
+ border-radius: 10px;
+}
+.disetal{
+ color: #0E0E0E;
+ padding: 8px;
+}
+.main-title{
+ color: #0E0E0E;
+ padding: 8px;
+}
+.main-btn{
+ padding: 10px 20px;
+ background-color: #5490F5;
+ margin-top: 15px;
+ color: #FFFFFF;
+ border: none;
+ border-radius: 5px;
+}
+.main-btn:hover{
+ background-color: crimson;
+}
+
+.main-2{
+ height: 250px;
+ width: 350px;
+ background-color: #C6E4D6;
+ padding-top: 40px;
+ padding-right: 20px;
+ padding-left: 20px;
+ border-radius: 10px;
+}
+
+.main-btn2{
+ padding: 10px 20px;
+ margin-top: 15px;
+ background-color: #09A15C;
+ color: #FFFFFF;
+ border: none;
+ border-radius: 5px;
+}
+
+.main-btn2:hover{
+ background-color: crimson;
+}
+
+.main-3{
+ height: 250px;
+ width: 350px;
+ background-color: #F7EBCF;
+ padding-top: 40px;
+ padding-right: 20px;
+ padding-left: 20px;
+ border-radius: 10px;
+}
+
+.main-btn3{
+ padding: 10px 20px;
+ margin-top: 15px;
+ background-color: #FFC239;
+ color: #FFFFFF;
+ border: none;
+ border-radius: 5px;
+}
+
+.main-btn3:hover{
+ background-color: crimson;
 }
